[package]
name = "slatedb-nbd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive", "env"] }
object_store = { version = "0.12.3", features = ["aws", "fs"] }
slatedb = { version = "0.7.0", features = ["wal_disable"] }
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-nbd = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
