[project]
name = "slatedb-nbd-bench"
version = "0.1.0"
description = "Benchmarking tool for SlateDB NBD projects"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = []

[project.scripts]
slatedb_nbd_bench = "slatedb_nbd_bench.cli:cli"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
