[project]
name = "slatedb-nbd-bench"
version = "0.1.0"
description = "Benchmarking tool for SlateDB NBD projects"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "aioboto3>=15.0.0",
    "httpx>=0.28.1",
    "typer>=0.16.0",
]

[project.scripts]
slatedb-nbd = "slatedb_nbd_bench.cli:app"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "types-aioboto3>=15.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ISC001", "COM812"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv]
package = true
